重构菜单